Fix squishing of images in dish-info (#64)

--- a/src/pages/dish-info/dish-info.scss
+++ b/src/pages/dish-info/dish-info.scss
@@ -2,4 +2,11 @@ page-dish-info {
   .spacer {
     padding-top: 2em;
   }
+
+  .picture {
+    max-height: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
 }
